@@ -17,6 +17,7 @@ Other features
  * Added support for ``short_description`` for field labels in modeladmin's ``InspectView`` (Wesley van Lee)
  * Rearranged SCSS folder structure to the client folder and split them approximately according to ITCSS. (Naomi Morduch Toubman, Jonny Scholes, Janneke Janssen, Hugo van den Berg)
  * Added support for specifying cell alignment on TableBlock (Samuel Mendes)
+ * Added more informative error when a non-image object is passed to the ``image`` template tag (Deniz Dogan)
 
 
 Bug fixes
